--- a/package.json
+++ b/package.json
@@ -35,8 +35,8 @@
     "nanostores": "^1.0.1",
     "path-browserify": "^1.0.1",
     "prettier": "^3.6.2",
-    "react": "^19.2.0-canary-fa3feba6-20250623",
-    "react-dom": "^19.2.0-canary-fa3feba6-20250623",
+    "react": "^19.x.x",
+    "react-dom": "^19.x.x",
     "react-router-dom": "^7.6.3",
     "socket.io-client": "^4.8.1",
     "tailwindcss": "^4.1.11"
@@ -50,8 +50,8 @@
     "@tailwindcss/vite": "^4.1.11",
     "@types/node": "^24.0.14",
     "@types/qs": "^6.14.0",
-    "@types/react": "^19.2.0-canary-fa3feba6-20250623",
-    "@types/react-dom": "^19.2.0-canary-fa3feba6-20250623",
+    "@types/react": "^19.x.x",
+    "@types/react-dom": "^19.x.x",
     "@typescript-eslint/parser": "^8.37.0",
     "@vitejs/plugin-react": "^4.6.0",
     "eslint": "^9.30.1",
