--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@eslint/compat": "^1.3.2",
+    "@lezer/highlight": "^1.2.1",
     "@mui/icons-material": "^7.3.1",
     "@mui/material": "^7.3.1",
     "@nanostores/react": "^1.0.0",
+    "@uiw/react-codemirror": "^4.25.1",
     "eslint-plugin-react": "^7.37.5",
     "nanoid": "^5.1.5",
     "nanostores": "^1.0.1",
