--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ai-editor-front",
+  "name": "project-board",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -28,11 +28,13 @@
     "@emotion/styled": "^11.11.5",
     "@eslint/compat": "^1.3.2",
     "@lezer/highlight": "^1.2.1",
-    "@mui/icons-material": "^7.3.1",
-    "@mui/material": "^7.3.1",
+    "@mui/icons-material": "6",
+    "@mui/material": "6",
     "@nanostores/react": "^1.0.0",
     "@uiw/react-codemirror": "^4.25.1",
+    "@vitejs/plugin-react": "^5.0.2",
     "eslint-plugin-react": "^7.37.5",
+    "framer-motion": "^12.23.12",
     "nanoid": "^5.1.5",
     "nanostores": "^1.0.1",
     "path-browserify": "^1.0.1",
