--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "react-dom": "^19.x.x",
     "react-router-dom": "^7.6.3",
     "socket.io-client": "^4.8.1",
-    "tailwindcss": "^4.1.11"
+    "tailwindcss": "^4.1.11",
+    "video.js": "^8.23.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
@@ -56,6 +57,7 @@
     "@types/qs": "^6.14.0",
     "@types/react": "^19.x.x",
     "@types/react-dom": "^19.x.x",
+    "@types/video.js": "^7.3.58",
     "@typescript-eslint/parser": "^8.37.0",
     "eslint": "^9.30.1",
     "eslint-config-prettier": "^10.1.8",
