--- a/package.json
+++ b/package.json
@@ -33,6 +33,9 @@
     "@nanostores/react": "^1.0.0",
     "@uiw/react-codemirror": "^4.25.1",
     "@vitejs/plugin-react": "^5.0.2",
+    "@xterm/addon-fit": "^0.10.0",
+    "@xterm/addon-webgl": "^0.18.0",
+    "@xterm/xterm": "^5.5.0",
     "eslint-plugin-react": "^7.37.5",
     "framer-motion": "^12.23.12",
     "nanoid": "^5.1.5",
@@ -43,6 +46,7 @@
     "react-dom": "^19.x.x",
     "react-router-dom": "^7.6.3",
     "socket.io-client": "^4.8.1",
+    "strip-ansi": "^7.1.2",
     "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
@@ -56,6 +60,7 @@
     "@types/qs": "^6.14.0",
     "@types/react": "^19.x.x",
     "@types/react-dom": "^19.x.x",
+    "@types/strip-ansi": "^5.2.1",
     "@typescript-eslint/parser": "^8.37.0",
     "eslint": "^9.30.1",
     "eslint-config-prettier": "^10.1.8",
