--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "prettier": "^3.6.2",
     "react": "^19.x.x",
     "react-dom": "^19.x.x",
+    "react-dropzone": "^14.3.8",
     "react-router-dom": "^7.6.3",
     "socket.io-client": "^4.8.1",
     "strip-ansi": "^7.1.2",
