--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@xterm/addon-fit": "^0.10.0",
     "@xterm/addon-webgl": "^0.18.0",
     "@xterm/xterm": "^5.5.0",
+    "axios": "^1.12.2",
     "eslint-plugin-react": "^7.37.5",
     "framer-motion": "^12.23.12",
     "nanoid": "^5.1.5",
