--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "project-board",
+  "name": "project-board-front",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -21,22 +21,23 @@
     "@codemirror/lang-markdown": "^6.2.5",
     "@codemirror/language": "^6.11.3",
     "@codemirror/lint": "^6.8.5",
+    "@codemirror/search": "6",
     "@codemirror/state": "^6.5.2",
     "@codemirror/theme-one-dark": "^6.1.3",
     "@codemirror/view": "^6.26.3",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@lezer/highlight": "^1.2.1",
-    "@mui/icons-material": "7",
+    "@mui/icons-material": "6",
     "@mui/material": "6",
+    "@nanostores/persistent": "^1.1.0",
     "@nanostores/react": "^1.0.0",
     "@uiw/react-codemirror": "^4.25.1",
-    "@vitejs/plugin-react": "^5.0.2",
     "@xterm/addon-fit": "^0.10.0",
     "@xterm/addon-webgl": "^0.18.0",
     "@xterm/xterm": "^5.5.0",
     "axios": "^1.12.2",
-    "eslint-plugin-react": "^7.37.5",
+    "codemirror": "6",
     "framer-motion": "^12.23.12",
     "github-markdown-css": "^5.8.1",
     "nanoid": "^5.1.5",
@@ -57,7 +58,10 @@
     "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
+    "@babel/runtime": "^7.28.4",
     "@eslint/js": "^9.36.0",
+    "@iconify-icon/react": "^3.0.1",
+    "@iconify/types": "^2.0.0",
     "@prettier/plugin-php": "^0.24.0",
     "@prettier/plugin-pug": "^3.4.0",
     "@prettier/plugin-ruby": "^4.0.4",
@@ -67,12 +71,13 @@
     "@types/qs": "^6.14.0",
     "@types/react": "^19.x.x",
     "@types/react-dom": "^19.x.x",
-    "@types/strip-ansi": "^5.2.1",
     "@typescript-eslint/parser": "^8.37.0",
+    "@vitejs/plugin-react": "^5.0.2",
     "eslint": "^9.36.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-import-resolver-typescript": "^4.4.4",
     "eslint-plugin-prettier": "^5.5.4",
+    "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "eslint-plugin-unused-imports": "^4.2.0",
@@ -82,5 +87,9 @@
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.44.0",
     "vite": "^7.0.4"
-  }
+  },
+  "main": "src/main.tsx",
+  "repository": "git@github.com:evillan0315/ai-editor-front.git",
+  "author": "Eddie Villanueva <evillan0315@gmail.com>",
+  "license": "MIT"
 }
