--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "rehype-raw": "^7.0.0",
     "rehype-sanitize": "^6.0.0",
     "remark-gfm": "^4.0.1",
+    "simple-git": "^3.28.0",
     "socket.io-client": "^4.8.1",
     "strip-ansi": "^7.1.2",
     "tailwindcss": "^4.1.11"
