--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "tsc -b && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "lint:fix": "eslint . --ext .ts,.tsx --fix",
-    "format": "prettier --write src/**/*.tsx src/**/*.ts",
+    "format": "prettier --write \"src/**/*.tsx\" \"src/**/*.ts\"",
     "preview": "vite preview"
   },
   "dependencies": {
