--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "codemirror": "6",
     "framer-motion": "^12.23.12",
     "github-markdown-css": "^5.8.1",
+    "lucide-react": "^0.545.0",
     "nanoid": "^5.1.5",
     "nanostores": "^1.0.1",
     "path-browserify": "^1.0.1",
