--- a/package.json
+++ b/package.json
@@ -58,7 +58,8 @@
     "simple-git": "^3.28.0",
     "socket.io-client": "^4.8.1",
     "strip-ansi": "^7.1.2",
-    "tailwindcss": "^4.1.11"
+    "tailwindcss": "^4.1.11",
+    "webrtc-adapter": "^9.0.3"
   },
   "devDependencies": {
     "@babel/runtime": "^7.28.4",
