--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-dom": "^19.x.x",
     "react-dropzone": "^14.3.8",
     "react-markdown": "^10.1.0",
+    "react-rnd": "^10.5.2",
     "react-router-dom": "^7.6.3",
     "rehype-highlight": "^7.0.2",
     "rehype-raw": "^7.0.0",
