--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@mui/material": "6",
     "@nanostores/persistent": "^1.1.0",
     "@nanostores/react": "^1.0.0",
+    "@types/crypto-js": "^4.2.2",
     "@uiw/react-codemirror": "^4.25.1",
     "@xterm/addon-clipboard": "^0.1.0",
     "@xterm/addon-fit": "^0.10.0",
@@ -39,6 +40,7 @@
     "@xterm/xterm": "^5.5.0",
     "axios": "^1.12.2",
     "codemirror": "6",
+    "crypto-js": "^4.2.0",
     "framer-motion": "^12.23.12",
     "github-markdown-css": "^5.8.1",
     "lucide-react": "^0.545.0",
