--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "dependencies": {
     "@codemirror/autocomplete": "^6.18.6",
-    "@codemirror/commands": "^6.8.1",
+    "@codemirror/commands": "^6.10.0",
     "@codemirror/lang-css": "^6.1.2",
     "@codemirror/lang-html": "^6.4.9",
     "@codemirror/lang-javascript": "^6.2.2",
@@ -33,7 +33,7 @@
     "@nanostores/persistent": "^1.1.0",
     "@nanostores/react": "^1.0.0",
     "@types/crypto-js": "^4.2.2",
-    "@uiw/react-codemirror": "^4.25.1",
+    "@uiw/react-codemirror": "^4.25.2",
     "@xterm/addon-clipboard": "^0.1.0",
     "@xterm/addon-fit": "^0.10.0",
     "@xterm/addon-webgl": "^0.18.0",
@@ -96,6 +96,9 @@
     "typescript-eslint": "^7.18.0",
     "vite": "^5.3.4"
   },
+  "resolutions": {
+  "@codemirror/commands": "6.10.0"
+},
   "main": "src/main.tsx",
   "repository": "git@github.com:evillan0315/ai-editor-front.git",
   "author": "Eddie Villanueva <evillan0315@gmail.com>",
